tests/error/array_cast_err.gw
#! [contains] can't cast
<<< [ 1 ] $ int[][] >>>;
